fix: resolve post-Java 8 file IO APIs for JRE 8 compatibility